--- a/Zmeika.csproj
+++ b/Zmeika.csproj
@@ -46,6 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PictureBoxWithInterpolationMode.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Snake.cs" />
     <Compile Include="SnakeForm.cs">
       <SubType>Form</SubType>
